View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0024795 | Open CASCADE | OCCT:Coding | public | 2014-04-03 20:35 | 2014-11-11 12:52 |
Reporter | kgv | Assigned To | apn | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2012 | ||
Target Version | 6.8.0 | Fixed in Version | 6.8.0 | ||
Summary | 0024795: TKOpenGl - new compilation warnings | ||||
Description | New warnings appeared within 0024739. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Please apply patch in branch CR24795. |
|
Dear kgv, could you please rebase branch CR24795, there are conflict files. |
|
I have rebased CR24795 and added two more commits -- fix for compiler warning in BOPCol_TBB.hxx, and test case for 0023792. Please test and then integrate without squashing (keeping commits separate). |
|
Dear BugMaster, Branch CR24795 (and products from GIT master) was compiled on MacOS, Linux and Windows platforms and tested. SHA-1: 13885d4421324dee2283b182b02ac5e6a99046e9 Number of compiler warnings: occt component : Linux: 21 (21 on master) Windows: 0 (0 on master) products component : Linux: 12 (12 on master) Windows: 2 (2 on master) Regressions/Differences: No regressions/differences Testing cases: Not needed Testing on Linux: Total MEMORY difference: 351044788 / 352015388 Total CPU difference: 51928.04000000006 / 50789.11000000014 Testing on Windows: Total MEMORY difference: 381065816 / 381244252 Total CPU difference: 32835.703125 / 36679.046875 There are no differences in images found by testdiff. |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-04-03 20:35 | kgv | New Issue | |
2014-04-03 20:35 | kgv | Assigned To | => kgv |
2014-04-03 20:35 | kgv | Relationship added | related to 0024739 |
2014-04-03 20:40 | kgv | Note Added: 0028664 | |
2014-04-03 20:40 | kgv | Assigned To | kgv => bugmaster |
2014-04-03 20:40 | kgv | Status | new => resolved |
2014-04-03 20:40 | kgv | Status | resolved => reviewed |
2014-04-04 16:26 |
|
Target Version | 6.7.1 => 6.8.0 |
2014-04-04 17:27 |
|
Note Added: 0028693 | |
2014-04-04 17:28 |
|
Assigned To | bugmaster => kgv |
2014-04-04 17:28 |
|
Status | reviewed => feedback |
2014-04-04 17:40 |
|
Note Added: 0028694 | |
2014-04-04 17:40 |
|
Assigned To | kgv => mkv |
2014-04-04 17:40 |
|
Status | feedback => reviewed |
2014-04-04 18:09 |
|
Assigned To | mkv => apn |
2014-04-07 15:57 | apn | Note Added: 0028714 | |
2014-04-07 15:57 | apn | Test case number | => Not needed |
2014-04-07 15:57 | apn | Assigned To | apn => bugmaster |
2014-04-07 15:57 | apn | Status | reviewed => tested |
2014-04-07 16:01 | apn | Note Edited: 0028714 | |
2014-04-11 14:43 | apn | Changeset attached | => occt master 5cff985a |
2014-04-11 14:43 | apn | Assigned To | bugmaster => apn |
2014-04-11 14:43 | apn | Status | tested => verified |
2014-04-11 14:43 | apn | Resolution | open => fixed |
2014-11-11 12:47 |
|
Fixed in Version | => 6.8.0 |
2014-11-11 12:52 |
|
Status | verified => closed |