0024795: TKOpenGl - new compilation warnings in OpenGl_Workspace_Raytrace.cxx